restgw/kubernetes/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: alert-gateway
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: alert-virtualservice
  namespace: alert
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/alert-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: fastapi-alert-webhook
